--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,47 @@ main {
   background: #eef6f6;
 }
 
+#search-field {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.search-flex {
+  display: flex;
+  width: fit-content;
+  height: 25px;
+  justify-content: center;
+  align-items: center;
+  background: #eef6f6;
+  margin: 5px;
+}
+
+.search-images {
+  background: #5ba4a4;
+  height: inherit;
+  width: 25px;
+  padding: 5px;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.search-images:hover {
+  background: #000;
+}
+
+.search-item {
+  margin: 10px;
+  height: 20px;
+  color: #5ba4a4;
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  font-weight: 700;
+  font-size: 14px;
+  cursor: pointer;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -22,7 +63,7 @@ main {
   font-family: 'League Spartan', sans-serif;
 }
 
-#details {
+.details {
   display: grid;
   grid-template-columns: 1fr 3fr 6fr;
   align-items: center;
@@ -32,24 +73,24 @@ main {
   background: #fff;
   height: 100px;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 2px;
   box-shadow: 1px 1px 1px #7b8e8e;
 }
 
-#details #imageDiv {
+.details #imageDiv {
   margin-right: 5px;
 }
 
-#details #imageDiv img {
+.details #imageDiv img {
   height: 50px;
 }
 
-#details #info {
+.details #info {
   display: flex;
   flex-direction: column;
 }
 
-#details #info .company {
+.details #info .company {
   display: flex;
   align-items: center;
   font-size: 10px;
@@ -57,7 +98,7 @@ main {
   justify-content: space-between;
 }
 
-#details #info .company .new, #details #info .company .featured {
+.details #info .company .new, .details #info .company .featured {
   height: 20px;
   background: #5ba4a4;
   border-radius: 10px;
@@ -71,33 +112,33 @@ main {
   font-weight: 400;
 }
 
-#details #info .company .featured {
+.details #info .company .featured {
   background: #2c2b2b;
 }
 
-#details #info > h2 {
+.details #info > h2 {
   font-size: 14px;
   margin: 10px 0;
   cursor: pointer;
 }
 
-#details #info > h2:hover {
-  color: #41b45e;
+.details #info > h2:hover {
+  color: #5ba4a4;
 }
 
-#details #info #data {
+.details #info #data {
   display: flex;
   justify-content: space-around;
   align-items: center;
   opacity: 0.8;
 }
 
-#details #info #data p {
+.details #info #data p {
   margin: 0 2px;
   font-size: 10px;
 }
 
-#details #info #data .dots {
+.details #info #data .dots {
   height: 3px;
   width: 3px;
   background: black;
@@ -105,16 +146,16 @@ main {
   opacity: 0.4;
 }
 
-#details #skills {
+.details #skills {
   display: flex;
   justify-self: right;
 }
 
-#details #skills #skilled {
+.details #skills #skilled {
   display: flex;
 }
 
-#details #skills #skill {
+.details #skills #skill {
   margin: 3px;
   background: #eef6f6;
   border-radius: 5px;
@@ -127,18 +168,18 @@ main {
   cursor: pointer;
 }
 
-#details #skills #skill:hover {
+.details #skills #skill:hover {
   color: #fff;
-  background: #41b45e;
+  background: #5ba4a4;
 }
 
-#details #skills .skill {
-  color: red;
+.details #skills #V {
+  color: #fff;
 }
 
 #search-box {
   background: #eef6f6;
-  height: 50px;
+  min-height: 50px;
   margin-top: -20px;
   position: relative;
 }
@@ -150,7 +191,8 @@ main {
   position: relative;
   top: -20px;
   z-index: 10;
-  height: 40px;
+  min-height: 40px;
+  padding: 10px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -162,10 +204,15 @@ main {
   width: 90%;
   border-radius: 5px;
   background: #fff;
-  height: 40px;
+  min-height: 40px;
 }
 
-#search p:hover {
-  color: #09f6f6;
-  text-decoration: underline;
+#search #clear {
+  font-weight: 700;
+  padding: 0 4px;
+}
+
+#search #clear:hover {
+  color: #5ba4a4;
+  border-bottom: 2px solid #5ba4a4;
 }
